--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
     <title>Home Page</title>
 </head>
 <body>
-
+  <!-- example image served automatically by express! -->
+  <img src="image.jpg"/>
 </body>
 </html>
