--- a/client/game.html
+++ b/client/game.html
@@ -64,6 +64,7 @@
             food: 3,
             chems: 5,
             power: 9,
+            message: "this is a demo message",
         };
 
         const playerDraws = [
@@ -163,7 +164,7 @@
 
         const displayLobby = () => {
             let names = game.players;
-            ctx.strokeStyle = "white";
+            ctx.fillStyle = "white";
             ctx.textAlign = "center";
             ctx.textBaseline="top"; 
             ctx.font = "30px Arial";
@@ -190,6 +191,10 @@
             ctx.fillRect(0,0,canvas.width,canvas.height);
 
     		drawCornerFrames();
+
+            drawMessage();
+
+            // DRAW GAME MESSAGE
 
             if(!game){
                 displayMakeRoom();
@@ -230,6 +235,7 @@
         const drawRooms = () => {
             const lineWidth = 3;
             ctx.strokeStyle = "white";
+            ctx.fillStyle = "white";
             ctx.textAlign = "left";
             ctx.textBaseline="top"; 
             ctx.font = "20px Arial";
@@ -279,7 +285,7 @@
                 let y = player.y * canvas.height
 
                 drawCircle(x, y, 3, "white");
-                ctx.strokeStyle = "white";
+                ctx.fillStyle = "white";
                 ctx.textAlign = "left";
                 ctx.textBaseline="top"; 
                 ctx.font = "16px Arial";
@@ -288,7 +294,6 @@
         };
 
         const drawStats = () => {
-            ctx.strokeStyle = "white";
             ctx.fillStyle = "white";
             ctx.textAlign = "left";
             ctx.textBaseline="middle"; 
@@ -311,6 +316,20 @@
             for(let n = 0; n < game.power; ++n)
                 ctx.fillRect(x + length + blockOffset*n, y + height*2, blockWidth, blockWidth);
 
+        };
+
+        const drawMessage = () => {
+            if(!game) return;
+
+            let x = 0.5 * canvas.width;
+            let y = 0.1 * canvas.height;
+
+            ctx.fillStyle = "white";
+            ctx.textAlign = "center";
+            ctx.textBaseline="middle"; 
+            ctx.font = "24px Arial";
+
+            ctx.fillText(game.message, x, y);
         };
 
         const drawCircle = (x,y,r,color) => {
