fixed bugs, still no solution to path issue

--- a/client/index.html
+++ b/client/index.html
@@ -13,18 +13,16 @@
                 
             });
 
-            socket.emit("joinGame");
-
     		update();
     	};
 
     	window.onload = init;
 
     	const update = () => {
-    		requestAnimationFrame(update);
+    		//requestAnimationFrame(update);
 
-            ctx.fillStyle = "black";
-            ctx.fillRect(0,0,canvas.width,canvas.height);
+            //ctx.fillStyle = "black";
+            //ctx.fillRect(0,0,canvas.width,canvas.height);
 
     		
     	};
