--- a/client/controller.html
+++ b/client/controller.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	  <script src="/socket.io/socket.io.js"></script>
-    <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
-    <script type="text/babel" src="controller.js"></script> 
+    <!-- <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
+    <script type="text/babel" src="controller.js"></script> -->
+    <script type="text/javascript" src="controller.js"></script> 
     <style>
         html, body {
             width:  100%;
@@ -33,11 +34,12 @@
 <body>
   <h1 class="message">Welcome to the Arctic Research Facility</h1>
   <div class="login container">
-  <h2>Name</h2>
-  <input class="name"></input>
-  <h2>Room</h2>
-  <input class="room"></input>
-  <button class="submit">ENTER</button>
+    <h2>Name</h2>
+    <input class="name"></input>
+    <h2>Room</h2>
+    <input class="room"></input>
+    <button class="submit">ENTER</button>
+  </div>
   <div class="action container"></div>
   <div class="vote container"></div>
 </body>
