--- a/client/controller.html
+++ b/client/controller.html
@@ -38,6 +38,10 @@
           border: 1vh solid black;
           text-align: center;
         }
+        .startGame {
+          width: 10vh;
+          height: 5vh;
+        }
         
         .full {
           color: background-white;
