--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,9 @@
 </head>
 <body>
   <!-- example image served automatically by express! -->
-  <img src="image.jpg"/>
+  <img src="image.jpg"/ style="height: 50vh">
+  <p>Welcome to The Thing... a mafia-like party game of betrayal and paranoia! Fun for the whole family!</p>
+  <p>To get started, go to the <a href="game">game screen</a> using your computer. Create a room name using the text field provided.</p>
+  <p>Then use your phone to go to the <a href="controller">controller screen</a> and pick a username. </p>
 </body>
 </html>
