--- a/client/controller.html
+++ b/client/controller.html
@@ -62,10 +62,10 @@
     <input class="name"></input>
     <h2>Room</h2>
     <input class="room"></input>
-    <button class="submit">ENTER</button>
+    <button class="submit">ALL PLAYERS READY</button>
   </div>
   <div class="HUD">
-    <div>Health</div>
+    <div class="healthLabel">Eat to restore health</div>
     <div class="health">
       <div class="full"></div>
       <div class="full"></div>
