--- a/client/controller.html
+++ b/client/controller.html
@@ -62,7 +62,7 @@
     <input class="name"></input>
     <h2>Room</h2>
     <input class="room"></input>
-    <button class="submit">ALL PLAYERS READY</button>
+    <button class="submit">JOIN</button>
   </div>
   <div class="HUD">
     <div class="healthLabel">Eat to restore health</div>
