--- a/client/controller.html
+++ b/client/controller.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	  <script src="/socket.io/socket.io.js"></script>
-    <!-- <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
-    <script type="text/babel" src="controller.js"></script> -->
-    <script type="text/javascript" src="controller.js"></script> 
+    <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
+    <script type="text/babel" src="controller.js"></script> 
+    <!--<script type="text/javascript" src="controller.js"></script> -->
     <style>
         html, body {
             width:  100%;
@@ -34,7 +34,6 @@
           display: inline-block;
           width: 6vh;
           height: 6vh;
-          margin: 3vh;
           text-align: center;
           background-image: url("heartEmpty.png");
           background-size: 100%;
