--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
 	<script src="/socket.io/socket.io.js"></script>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
     <script type="text/babel" >
@@ -27,10 +28,6 @@
     		
     	};
     </script>
-
-    <style>
-        
-    </style>
 
     <title>Home Page</title>
 </head>
