--- a/client/game.html
+++ b/client/game.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
 	<script src="/socket.io/socket.io.js"></script>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
     <script type="text/javascript" src="gamescreen.js"></script> 
-
-    <style>
-        html, body {
-            width:  100%;
-            height: 100%;
-            margin: 0px;
-        }
-        input{
-            position: absolute;
-            left: 50%;
-            top: 50%;
-        }
-    </style>
 
     <title>Main Game Screen</title>
 </head>
