Changed controller log in to form

--- a/client/controller.html
+++ b/client/controller.html
@@ -11,13 +11,13 @@
 </head>
 <body>
   <h1 class="message">Welcome to the Arctic Research Facility</h1>
-  <div class="login container">
+  <form class="login container" id="loginContainer">
     <h2>Name</h2>
     <input class="name"></input>
     <h2>Room</h2>
     <input class="room"></input>
-    <button class="submit">JOIN</button>
-  </div>
+    <input type = "submit" class="submit" value="JOIN">
+  </form>
   <div class="HUD">
     <div class="healthLabel">Eat to restore health</div>
     <div class="health">
