Game screen css and visuals

--- a/client/game.html
+++ b/client/game.html
@@ -13,5 +13,7 @@
     <canvas>Get a real browser!</canvas>
     <form id="roomName"><input type="text"></input></form>
 
+    <img id="crtImage" src="crt.jpg" hidden>
+
 </body>
 </html>
