We have onboarding/instructions that tell the players how to play. They probably all work correctly. 	This takes the form of an on boarding message that changes depending on the phase and displays on the screen in a block of text. Players can rejoin the game properly (I'm pretty sure) The textbook is auto selected on the game screen Health minimum starting value is now 2

--- a/client/game.html
+++ b/client/game.html
@@ -11,7 +11,7 @@
 <body>
   
     <canvas>Get a real browser!</canvas>
-    <form id="roomName"><input type="text"></input></form>
+    <form id="roomName"><input type="text" autofocus></input></form>
 
     <img id="crtImage" src="crt.jpg" hidden>
 
