--- a/client/game.html
+++ b/client/game.html
@@ -14,6 +14,7 @@
     <form id="roomName"><input type="text" autofocus></input></form>
 
     <img id="crtImage" src="crt.jpg" hidden>
+    <img id="mapImage" src="map.png" hidden>
 
 </body>
 </html>
