Quick fix for images

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <!-- example image served automatically by express! -->
-  <img src="logoAnim.gif"/>
+  <img src="logoAnim.gif" id="logo"/>
   <p>Welcome to The Thing: PARTY... a mafia-like party game of betrayal and paranoia! Fun for the whole family!</p>
   <p>To get started, go to the <a href="game">GAME SCREEN</a> using your computer. Create a room name using the text field provided.</p>
   <p>Then use your phone to go to the <a href="controller">CONTROLLER</a> and pick a username. </p>
