Fixed main page css issue

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,8 @@
 <body>
   <!-- example image served automatically by express! -->
   <img src="logoAnim.gif" id="logo"/>
-  <p>Welcome to The Thing: PARTY... a mafia-like party game of betrayal and paranoia! Fun for the whole family!</p>
-  <p>To get started, go to the <a href="game">GAME SCREEN</a> using your computer. Create a room name using the text field provided.</p>
-  <p>Then use your phone to go to the <a href="controller">CONTROLLER</a> and pick a username. </p>
+  <p class="introText">Welcome to The Thing: PARTY... a mafia-like party game of betrayal and paranoia! Fun for the whole family!</p>
+  <p class="introText">To get started, go to the <a href="game">GAME SCREEN</a> using your computer. Create a room name using the text field provided.</p>
+  <p class="introText">Then use your phone to go to the <a href="controller">CONTROLLER</a> and pick a username. </p>
 </body>
 </html>
