--- a/client/controller.html
+++ b/client/controller.html
@@ -30,6 +30,7 @@
     <div class="action container"></div>
     <div class="vote container"></div>
     <a href="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif"><div class="ad"></div></a>
+    <div class="closeAd"></div>
   </div>
   <div class="crtEffect"></div>
 </body>
